# maestro

./: .dockerignore  .editorconfig  .gitignore  .jscpdignore  BUILD.bazel  Dockerfile  MODULE.bazel  Makefile  README.md  buf.gen.yaml  buf.yaml  docker-compose.yaml  go.mod  go.sum  main.go
.container/: opa-config.yaml  opa-policy.rego  sidecar.yaml
.github/linters/: .jscpd.json
.github/workflows/: buf.yaml  build.yaml  ci.yaml  codegen.yaml  golangci-lint.yaml  lint.yaml  publish.yaml
api/: BUILD.bazel  buf.yaml
api/config/v1/: authn.pb.go  authn.pb.validate.go  authn.proto  authn_deepcopy.gen.go  authn_json.gen.go  authz.pb.go  authz.pb.validate.go  authz.proto  authz_deepcopy.gen.go  authz_json.gen.go  cors.pb.go  cors.pb.validate.go  cors.proto  cors_deepcopy.gen.go  cors_json.gen.go  service.pb.go  service.pb.validate.go  service.proto  service_deepcopy.gen.go  service_json.gen.go
api/controller/v1/: proxy_config.pb.go  proxy_config.pb.validate.go  proxy_config.proto  proxy_config_deepcopy.gen.go  proxy_config_json.gen.go
api/maestro/config/v1/: BUILD.bazel  authn.proto  authz.proto  cors.proto  proxy_config.pb.go  proxy_config.proto  proxy_config_deepcopy.gen.go  proxy_config_json.gen.go  service.proto  sidecar.proto  upstream.proto
bazel/go/: BUILD.bazel  compiler.bzl
bazel/oci/: go_multi_arch_image.bzl  transition.bzl
cmd/: BUILD.bazel  agent.go  controller.go  grpcprobe.go  httpprobe.go  registrar.go  root.go  server.go  sidecar.go
code-generator/: kube_codegen.sh
deployments/crd/: proxyconfig.yaml
example/k8s/: deployment.yaml
hack/: boilerplate.go.txt  tools.go  update-codegen.sh  verify-codegen.sh
internal/config/: BUILD.bazel  sidecar.go
internal/config/annotation/: BUILD.bazel  annotations.go
internal/config/constants/: BUILD.bazel  cluster.go  spiffe.go
internal/core/config/: BUILD.bazel  sidecar.go  sidecar_test.go
internal/core/config/envoy/: BUILD.bazel  cluster.go  filter.go  filterchain.go  filterchain_test.go  healthcheck.go  listener.go  vhost.go
internal/core/config/proxy/: BUILD.bazel  bootstrap.go  bootstrap_test.go  cluster.go  vhosts.go  vhosts_test.go
internal/core/config/testdata/: default.yaml  service_invalid_port.yaml  service_missing_health_check.yaml  service_with_multiple_ports.yaml
internal/core/server/: BUILD.bazel  shutdown.go
internal/core/shutdown/: BUILD.bazel  shutdown.go  shutdown_test.go
internal/core/sidecar/: BUILD.bazel  callbacks.go  server.go
internal/envoy/: admin.go  config.go
internal/log/: BUILD.bazel  logger.go
internal/proxy/: BUILD.bazel  admin.go  config.go  static.go  vhosts.go
internal/proxy/envoy/: BUILD.bazel  filterchain.go  httpfilter.go  listener.go  vhost.go
internal/types/: BUILD.bazel  cluster.go  endpoint.go  service.go
internal/util/: BUILD.bazel  closer.go  file.go  proto.go  sni.go  tls.go
pkg/apis/config/: BUILD.bazel  register.go
pkg/apis/config/v1/: BUILD.bazel  register.go  types.go
pkg/apis/maestro/: register.go
pkg/apis/maestro/v1/: register.go  types.go  zz_generated.deepcopy.go
pkg/apis/maestrocontroller/: register.go
pkg/apis/maestrocontroller/v1/: doc.go  register.go  types.go  zz_generated.deepcopy.go
pkg/bootstrap/: BUILD.bazel  opa.go  options.go  spire.go  xds.go
pkg/config/constants/: BUILD.bazel  constants.go
pkg/controller/: BUILD.bazel  controller.go
pkg/controllers/: controller.go
pkg/http/handlers/: BUILD.bazel  adimission.go  admission.go  mutation.go  validation.go
pkg/http/server/: BUILD.bazel  server.go  server_test.go
pkg/kube/: BUILD.bazel
pkg/manager/: BUILD.bazel  base.go  maestro.go  registrar.go
pkg/reconciler/: BUILD.bazel  base.go  maestro.go  registrar.go  registrar_test.go
pkg/signals/: BUILD.bazel  signal.go
pkg/xds/server/: BUILD.bazel  server.go
testdata/: container_test.yaml
