load("@gazelle//:def.bzl", "DEFAULT_LANGUAGES", "gazelle", "gazelle_binary")
load("@rules_go//go:def.bzl", "TOOLS_NOGO", "go_binary", "go_library", "nogo")
load("//bazel/oci:go_multi_arch_image.bzl", "go_multi_arch_image")

exports_files(
    ["buf.work.yaml"],
    visibility = ["//visibility:public"],
)

# gazelle:resolve proto buf/validate/validate.proto @buf_deps//buf/validate:validate_proto
# gazelle:resolve proto go buf/validate/validate.proto @build_buf_gen_go_bufbuild_protovalidate_protocolbuffers_go//buf/validate
gazelle(
    name = "gazelle",
    gazelle = ":gazelle_buf",
)

gazelle_binary(
    name = "gazelle_buf",
    languages = DEFAULT_LANGUAGES + [
        # Loads the Buf extension
        "@rules_buf//gazelle/buf:buf",
        # NOTE: This needs to be loaded after the proto language
    ],
    visibility = ["//visibility:public"],
)

nogo(
    name = "nogo",
    visibility = ["//visibility:public"],  # must have public visibility
    deps = TOOLS_NOGO,
)

go_library(
    name = "maestro_lib",
    srcs = ["main.go"],
    importpath = "github.com/bpalermo/maestro",
    visibility = ["//visibility:private"],
    deps = ["//cmd"],
)

go_binary(
    name = "maestro",
    embed = [":maestro_lib"],
    visibility = ["//visibility:public"],
)

go_multi_arch_image(
    name = "maestro_go_multi_arch_image",
    binary = ":maestro",
    repository = "palermo/maestro",
    visibility = ["//visibility:public"],
)
