module(
    name = "com_github_bpalermo_maestro",
    version = "1.0.0",
)

bazel_dep(name = "aspect_bazel_lib", version = "2.21.2")
bazel_dep(name = "rules_go", version = "0.58.3")
bazel_dep(name = "protobuf", version = "33.0")
bazel_dep(name = "rules_buf", version = "0.5.2")
bazel_dep(name = "rules_oci", version = "2.2.6")
bazel_dep(name = "container_structure_test", version = "1.21.1")
bazel_dep(name = "rules_pkg", version = "1.0.1")

# upgrading breaks build
bazel_dep(name = "gazelle", version = "0.43.0", dev_dependency = True)
bazel_dep(name = "protovalidate", version = "1.0.0", dev_dependency = True)

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")

# Download an SDK for the host OS & architecture as well as common remote execution
# platforms, using the version given from the `go.mod` file.
go_sdk.from_file(go_mod = "//:go.mod")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

## All *direct* Go dependencies of the module have to be listed explicitly.
use_repo(
    go_deps,
    "build_buf_gen_go_bufbuild_protovalidate_protocolbuffers_go",
    "build_buf_go_protovalidate",
    "build_buf_go_protoyaml",
    "com_github_cncf_xds_go",
    "com_github_emicklei_go_restful",
    "com_github_emicklei_go_restful_v3",
    "com_github_envoyproxy_go_control_plane",
    "com_github_envoyproxy_go_control_plane_envoy",
    "com_github_envoyproxy_go_control_plane_ratelimit",
    "com_github_fxamacker_cbor_v2",
    "com_github_go_jose_go_jose_v4",
    "com_github_go_logr_logr",
    "com_github_go_logr_zapr",
    "com_github_go_openapi_jsonreference",
    "com_github_go_openapi_swag",
    "com_github_golang_protobuf",
    "com_github_google_cel_go",
    "com_github_google_gnostic_models",
    "com_github_google_uuid",
    "com_github_munnerz_goautoneg",
    "com_github_prometheus_client_model",
    "com_github_spf13_cobra",
    "com_github_spf13_pflag",
    "com_github_spiffe_go_spiffe_v2",
    "com_github_stretchr_testify",
    "dev_cel_expr",
    "in_gopkg_evanphx_json_patch_v4",
    "io_istio_tools",
    "io_k8s_api",
    "io_k8s_apimachinery",
    "io_k8s_client_go",
    "io_k8s_klog_v2",
    "io_k8s_kube_openapi",
    "io_k8s_sigs_controller_runtime",
    "io_k8s_sigs_json",
    "io_k8s_sigs_structured_merge_diff_v4",
    "io_k8s_utils",
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
    "org_golang_x_net",
    "org_golang_x_oauth2",
    "org_golang_x_sync",
    "org_golang_x_sys",
    "org_golang_x_term",
    "org_golang_x_time",
    "org_uber_go_atomic",
    "org_uber_go_zap",
)

buf = use_extension("@rules_buf//buf:extensions.bzl", "buf")

# Override the default version of buf
buf.toolchains(
    sha256 = "a1338fb6f5c4e6663f1b0b49d841a85b26b7ea1266e02aa24537134d101c597f",
    version = "v1.59.0",
)

# Allow people to use `bazel run @rules_buf_toolchains//:buf -- --version`
use_repo(buf, "rules_buf_toolchains")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_static",
    digest = "sha256:e8a4044e0b4ae4257efa45fc026c0bc30ad320d43bd4c1a7d5271bd241e386d0",
    image = "gcr.io/distroless/static-debian12",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
    tag = "nonroot",
)
use_repo(oci, "distroless_static", "distroless_static_linux_amd64", "distroless_static_linux_arm64_v8")
