load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "controller.go",
        "httpprobe.go",
        "root.go",
    ],
    importpath = "github.com/bpalermo/maestro/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/core/shutdown",
        "//internal/util",
        "//pkg/controller",
        "//pkg/http/server",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_spf13_pflag//:pflag",
        "@com_github_spiffe_go_spiffe_v2//spiffetls/tlsconfig",
        "@com_github_spiffe_go_spiffe_v2//workloadapi",
        "@io_k8s_klog_v2//:klog",
    ],
)
