load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "controller.go",
        "httpprobe.go",
        "registrar.go",
        "root.go",
    ],
    importpath = "github.com/bpalermo/maestro/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/core/shutdown",
        "//internal/util",
        "//pkg/controller",
        "//pkg/http/server",
        "//pkg/manager",
        "//pkg/reconciler",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_spf13_pflag//:pflag",
        "@com_github_spiffe_go_spiffe_v2//spiffetls/tlsconfig",
        "@com_github_spiffe_go_spiffe_v2//workloadapi",
        "@io_k8s_api//discovery/v1:discovery",
        "@io_k8s_klog_v2//:klog",
        "@io_k8s_sigs_controller_runtime//pkg/builder",
        "@io_k8s_sigs_controller_runtime//pkg/log",
        "@io_k8s_sigs_controller_runtime//pkg/log/zap",
        "@io_k8s_sigs_controller_runtime//pkg/manager/signals",
    ],
)
