load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "util",
    srcs = [
        "file.go",
        "proto.go",
        "sni.go",
    ],
    importpath = "github.com/bpalermo/maestro/internal/util",
    visibility = ["//:__subpackages__"],
    deps = [
        "@build_buf_go_protoyaml//:protoyaml",
        "@com_github_rs_zerolog//log",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/known/anypb",
    ],
)

go_test(
    name = "util_test",
    srcs = ["proto_test.go"],
    embed = [":util"],
)
