load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "util",
    srcs = [
        "closer.go",
        "proto.go",
        "sni.go",
        "tls.go",
        "unstructured.go",
    ],
    importpath = "github.com/bpalermo/maestro/internal/util",
    visibility = ["//:__subpackages__"],
    deps = [
        "@build_buf_go_protoyaml//:protoyaml",
        "@io_k8s_klog_v2//:klog",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/known/anypb",
    ],
)
