load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "mgr",
    srcs = [
        "maestro.go",
        "registrar.go",
    ],
    importpath = "github.com/bpalermo/maestro/pkg/manager",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/reconciler",
        "@com_github_go_logr_logr//:logr",
        "@io_k8s_api//discovery/v1:discovery",
        "@io_k8s_sigs_controller_runtime//pkg/builder",
        "@io_k8s_sigs_controller_runtime//pkg/client/config",
        "@io_k8s_sigs_controller_runtime//pkg/healthz",
        "@io_k8s_sigs_controller_runtime//pkg/manager",
        "@io_k8s_sigs_controller_runtime//pkg/metrics/server",
    ],
)
