load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "reconciler",
    srcs = [
        "base.go",
        "registrar.go",
    ],
    importpath = "github.com/bpalermo/maestro/pkg/reconciler",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/types",
        "@io_k8s_api//discovery/v1:discovery",
        "@io_k8s_sigs_controller_runtime//pkg/client",
        "@io_k8s_sigs_controller_runtime//pkg/reconcile",
    ],
)
