load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "reconciler",
    srcs = [
        "maestro.go",
        "registrar.go",
    ],
    importpath = "github.com/bpalermo/maestro/pkg/reconciler",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/types",
        "@com_github_go_logr_logr//:logr",
        "@io_k8s_api//discovery/v1:discovery",
        "@io_k8s_sigs_controller_runtime//pkg/client",
        "@io_k8s_sigs_controller_runtime//pkg/reconcile",
        "@io_k8s_utils//pointer",
    ],
)

go_test(
    name = "reconciler_test",
    srcs = ["registrar_test.go"],
    embed = [":reconciler"],
    deps = [
        "//internal/types",
        "@com_github_go_logr_logr//testr",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@io_k8s_api//discovery/v1:discovery",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_apimachinery//pkg/runtime",
        "@io_k8s_sigs_controller_runtime//pkg/client",
        "@io_k8s_sigs_controller_runtime//pkg/client/fake",
        "@io_k8s_sigs_controller_runtime//pkg/reconcile",
        "@io_k8s_utils//pointer",
    ],
)
