load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "config",
    srcs = ["sidecar.go"],
    importpath = "github.com/bpalermo/maestro/internal/core/config",
    visibility = ["//:__subpackages__"],
    deps = [
        "//api/maestro/config/v1:config_go_proto",
        "@build_buf_go_protoyaml//:protoyaml",
        "@com_github_bufbuild_protovalidate_go//:protovalidate-go",
    ],
)

go_test(
    name = "config_test",
    srcs = ["sidecar_test.go"],
    data = glob(["testdata/**"]),
    embed = [":config"],
    deps = [
        "//api/maestro/config/v1:config_go_proto",
        "@com_github_bufbuild_protovalidate_go//:protovalidate-go",
        "@com_github_stretchr_testify//assert",
        "@org_golang_google_protobuf//proto",
    ],
)
