load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "envoy",
    srcs = [
        "filter.go",
        "filterchain.go",
        "httpfilter.go",
        "listener.go",
        "vhost.go",
    ],
    importpath = "github.com/bpalermo/maestro/internal/proxy/envoy",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/config/constants",
        "//internal/util",
        "@com_github_envoyproxy_go_control_plane_envoy//config/core/v3:core",
        "@com_github_envoyproxy_go_control_plane_envoy//config/listener/v3:listener",
        "@com_github_envoyproxy_go_control_plane_envoy//config/route/v3:route",
        "@com_github_envoyproxy_go_control_plane_envoy//extensions/filters/http/ext_authz/v3:ext_authz",
        "@com_github_envoyproxy_go_control_plane_envoy//extensions/filters/http/jwt_authn/v3:jwt_authn",
        "@com_github_envoyproxy_go_control_plane_envoy//extensions/filters/http/router/v3:router",
        "@com_github_envoyproxy_go_control_plane_envoy//extensions/filters/network/http_connection_manager/v3:http_connection_manager",
        "@com_github_envoyproxy_go_control_plane_envoy//extensions/transport_sockets/tls/v3:tls",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/known/durationpb",
        "@org_golang_google_protobuf//types/known/wrapperspb",
    ],
)
