load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "handlers",
    srcs = ["adimission.go"],
    importpath = "github.com/bpalermo/maestro/pkg/http/handlers",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/config",
        "//pkg/apis/config/v1:config",
        "@build_buf_go_protovalidate//:protovalidate",
        "@io_k8s_api//admission/v1:admission",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_apimachinery//pkg/runtime",
        "@io_k8s_apimachinery//pkg/runtime/schema",
        "@io_k8s_apimachinery//pkg/runtime/serializer",
        "@io_k8s_klog_v2//:klog",
    ],
)
