load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "server",
    srcs = ["server.go"],
    importpath = "github.com/bpalermo/maestro/pkg/http/server",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/http/handlers",
        "@com_github_spiffe_go_spiffe_v2//spiffetls/tlsconfig",
        "@com_github_spiffe_go_spiffe_v2//workloadapi",
        "@io_k8s_klog_v2//:klog",
        "@org_uber_go_atomic//:atomic",
    ],
)
