load("@rules_buf//buf:defs.bzl", "buf_lint_test")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "config_proto",
    srcs = [
        "authn.proto",
        "authz.proto",
        "cors.proto",
        "service.proto",
        "sidecar.proto",
        "upstream.proto",
    ],
    strip_import_prefix = "/api",
    visibility = ["//visibility:public"],
    deps = ["@buf_deps//buf/validate:validate_proto"],
)

go_proto_library(
    name = "config_go_proto",
    importpath = "github.com/bpalermo/maestro/config/v1",
    proto = ":config_proto",
    visibility = ["//visibility:public"],
    deps = ["@build_buf_gen_go_bufbuild_protovalidate_protocolbuffers_go//buf/validate"],
)

buf_lint_test(
    name = "config_proto_lint",
    targets = [":config_proto"],
)
