load("@rules_buf//buf:defs.bzl", "buf_lint_test")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "maestro_config_v1_proto",
    srcs = [
        "authn.proto",
        "authz.proto",
        "cors.proto",
        "proxy_config.proto",
        "service.proto",
        "upstream.proto",
    ],
    strip_import_prefix = "/api",
    visibility = ["//visibility:public"],
    deps = ["@buf_deps//buf/validate:validate_proto"],
)

go_proto_library(
    name = "maestro_config_v1_go_proto",
    compilers = [
        "@rules_go//proto:go_proto",
        "//bazel/go:go_json",
        "//bazel/go:go_deepcopy",
    ],
    importpath = "github.com/bpalermo/maestro/api/config/v1",
    proto = ":maestro_config_v1_proto",
    visibility = ["//visibility:public"],
    deps = ["@build_buf_gen_go_bufbuild_protovalidate_protocolbuffers_go//buf/validate"],
)

buf_lint_test(
    name = "maestro_config_v1_proto_lint",
    targets = [":maestro_config_v1_proto"],
)
