load("@protobuf//bazel:proto_library.bzl", "proto_library")
load("@rules_buf//buf:defs.bzl", "buf_lint_test")
load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "configv1_proto",
    srcs = [
        "authn.proto",
        "authz.proto",
        "cors.proto",
        "proxy_config.proto",
        "service.proto",
        "upstream.proto",
    ],
    strip_import_prefix = "/api",
    visibility = ["//visibility:public"],
    deps = ["@protovalidate//proto/protovalidate/buf/validate:validate_proto"],
)

go_proto_library(
    name = "configv1_go_proto",
    compilers = [
        "@rules_go//proto:go_proto",
        "//bazel/go:go_json",
        "//bazel/go:go_deepcopy",
    ],
    importpath = "github.com/bpalermo/maestro/api/config/v1",
    proto = ":configv1_proto",
    visibility = ["//visibility:public"],
    deps = ["@build_buf_gen_go_bufbuild_protovalidate_protocolbuffers_go//buf/validate"],
)

go_library(
    name = "config",
    embed = [":configv1_go_proto"],
    importpath = "github.com/bpalermo/maestro/api/config/v1",
    visibility = ["//visibility:public"],
)

buf_lint_test(
    name = "configv1_proto_lint",
    config = "//api:buf.yaml",
    targets = [":configv1_proto"],
)
